--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -1,9 +1,12 @@
 module-template: ! 'module MODULE_NAME where
 
 '
-extensions: {}
+extensions:
+  OverloadedStrings: true
 environment: ghc-7.4.2-stable-13.09
 cabal-file: project.cabal
+hidden-packages: ''
 version: 1
+extra-packages: ''
 ghc-args: []
 excluded-modules: []
