--- a/htextql.cabal
+++ b/htextql.cabal
@@ -20,6 +20,6 @@ executable htextql
   main-is:             Main.hs
   other-modules:       Textql.Options, Textql.Sqlite, Textql.Types, Textql.Utils
   other-extensions:    OverloadedStrings
-  build-depends:       base, text, persistent, persistent-sqlite
+  build-depends:       base, text, persistent, persistent-sqlite, fast-logger
   hs-source-dirs:      src
   default-language:    Haskell2010
